# vibe-cognition

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json  whats-new.json
.cognition/: .gitignore  journal.jsonl
.cognition/briefs/: ced8f0401bd2-mcp-first-connect-plan.md
.github/scripts/: check_version_match.py  pyright_ratchet.py
.github/workflows/: ci.yml
agents/: curate-cluster-analyzer.md  curate-conflict-analyzer.md  curate-edge-analyzer.md  curate-orchestrator.md  plan.md
agents/curate-edges/: SKILL.md  cluster-analyzer.md  edge-analyzer.md
agents/hooks/: post-commit.py
agents/vibe-backfill/: SKILL.md
agents/vibe-cognition/: SKILL.md
agents/vibe-curate/: SKILL.md
docs/: 260701-fable-audit-consumer.md  260701-fable-audit-interconnectivity.md  260701-fable-audit-systems.md  260702-fable-burndown-plan.md  260714-dashboard-redesign.md  260714-team-cognition-battle-plan.md  260714-team-cognition-survey.md  AUDIT-2026-06-10.md  BACKLOG.md  DESIGN-document-storage.md  MANAGEMENT-LEDGER.md  dashboard-redesign-mockup.html  graph-recording-queue.md  topology-guide.md  wp-1-plan.md  wp-2-plan.md  wp-2-pr-body.md  wp-3-plan.md  wp-3-pr-body.md  wp-4-plan.md  wp-4-pr-body.md  wp-5-plan.md  wp-5-pr-body.md  wp-cap-plan.md  wp-cap-pr-body.md  wp-core-tail-plan.md  wp-core-tail-pr-body.md  wp-d1-plan.md  wp-d1b-plan.md  wp-d2-plan.md  wp-d3-plan.md  wp-d4-plan.md  wp-dash-tail-plan.md  wp-e3-plan.md  wp-emb-plan.md  wp-gitattr-auto-plan.md  wp-id-plan.md  wp-lifecycle-plan.md  wp-lifecycle-pr-body.md  wp-plan-xp-discovery-plan.md  (+21 more)
hooks/: hooks.json  post-commit.py  post-commit.sh  reinject-instructions.sh  session-start.sh  start-server.sh
scripts/: bench_wave1.py  bench_wave3.py  eval_conflict_lens.py  smoke_conflict_pass.py
skills/vibe-backfill/: SKILL.md
skills/vibe-cognition/: SKILL.md
skills/vibe-curate/: SKILL.md  cluster-analyzer.md  edge-analyzer.md
skills/vibe-dashboard/: SKILL.md
skills/vibe-document/: SKILL.md
skills/vibe-workflow/: SKILL.md
src/vibe_cognition/: __init__.py  _heavy_import_guard.py  _startup_timing.py  _venv_guard.py  backfill_identity.py  config.py  instructions.py  lifecycle.py  migrate_mcp.py  server.py  update_check.py  whats_new.py
src/vibe_cognition/cognition/: __init__.py  backfill.py  chunking.py  curator.py  documents.py  git_hygiene.py  git_identity.py  journal_io.py  models.py  operations.py  prime.py  queries.py  readme.py  snapshot_cli.py  storage.py  task_meta.py
src/vibe_cognition/dashboard/: __init__.py  api.py  cli.py  middleware.py  server.py
src/vibe_cognition/dashboard/static/: app.js  index.html  styles.css
src/vibe_cognition/embeddings/: __init__.py  _backend.py  _load_mutex.py  _sidecar_protocol.py  generator.py  sidecar.py  sidecar_client.py  storage.py
src/vibe_cognition/tools/: __init__.py  cognition_tools.py  dashboard_tool.py  dispatch.py  project_registry.py  readme_tool.py  service_tools.py  utils.py
tests/: conftest.py  test_backfill.py  test_backfill_identity.py  test_chromadb_cross_process.py  test_chunking.py  test_ci_scripts.py  test_cognition.py  test_cognition_curator.py  test_config.py  test_dashboard.py  test_deterministic_edges.py  test_doc_drift.py  test_documents.py  test_e3_doc_prefix.py  test_embeddings_storage.py  test_git_hygiene.py  test_heavy_import_guard.py  test_hooks_shell.py  test_instructions.py  test_journal_concurrency.py  test_lifecycle.py  test_migrate_mcp.py  test_multidigraph.py  test_node_id_collision.py  test_ollama_backend.py  test_person.py  test_plugin_json.py  test_post_commit_hook.py  test_prime.py  test_readme.py  test_reembed_on_replay.py  test_search_flags.py  test_server_lifespan.py  test_snapshot_cli.py  test_startup_timing.py  test_sync_unknown_node_type_tolerance.py  test_task.py  test_tc10_filter_completeness.py  test_tc14_digest.py  test_tc15_containment_obs.py  (+20 more)
tests/fixtures/: conflict_lens_labeled_pairs.json
