[project]
name = "vibe-cognition"
version = "0.5.1"
description = "MCP server for project knowledge graphs — decisions, failures, discoveries, patterns"
authors = [{ name = "BlckLvls" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "networkx>=3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "einops>=0.7.0",
    "ollama>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_cognition"]

[tool.hatch.build.targets.wheel.force-include]
"src/vibe_cognition/dashboard/static" = "vibe_cognition/dashboard/static"

[project.scripts]
vibe-cognition = "vibe_cognition.server:main"
vibe-cognition-prime = "vibe_cognition.cognition.prime:main"
vibe-cognition-backfill = "vibe_cognition.cognition.backfill:main"
vibe-cognition-dashboard = "vibe_cognition.dashboard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
