[project]
name = "vibe-cognition"
version = "0.18.0"
description = "MCP server for project knowledge graphs — decisions, failures, discoveries, patterns"
authors = [{ name = "Colton Dyck" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "networkx>=3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Required at runtime, not imported directly: nomic-embed-text-v1.5's
    # trust_remote_code model code (loaded in embeddings/generator.py via
    # SentenceTransformer(..., trust_remote_code=True)) imports einops.
    # Removing it breaks embedding generation at model load.
    # Pin the remote code to a known-good revision via the EMBEDDING_REVISION
    # env var (config.embedding_revision) to harden against upstream hub changes.
    "einops>=0.7.0",
    # torch is declared DIRECTLY (it's otherwise transitive via
    # sentence-transformers) because uv's [tool.uv.sources] index pinning is
    # ignored for purely-transitive deps — only a direct dep reaches the
    # pytorch-cpu index below. The pin is EXACT (==2.11.0) to guarantee zero
    # version drift at adoption; see [tool.uv.sources] for the full rationale.
    "torch==2.11.0",
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_cognition"]

[project.scripts]
vibe-cognition = "vibe_cognition.server:main"
vibe-cognition-prime = "vibe_cognition.cognition.prime:main"
vibe-cognition-backfill = "vibe_cognition.cognition.backfill:main"
vibe-cognition-dashboard = "vibe_cognition.dashboard.cli:main"
vibe-cognition-snapshot = "vibe_cognition.cognition.snapshot_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
# WP-1 item 0: no single test may wedge an unattended run. Thread-based (the
# default) is Windows-safe; individual tests can override with @pytest.mark.timeout.
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

# This is a CPU-inference tool (nomic-embed runs fine on CPU); the default
# torch resolution drags in the multi-GB CUDA stack on Linux as dead weight
# (first-install pain for plugin users — audit B-4). Pin torch to PyTorch's
# CPU wheel index so installs stay slim on every platform (the index serves
# linux/win as 2.11.0+cpu and macOS as the plain 2.11.0 arm64 wheel).
# NB: torch must be a DIRECT dep (see [project.dependencies]) for this source
# to apply — uv ignores [tool.uv.sources] for purely-transitive packages.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
